src/objects/Shared_Services_Requests__c.object
<CustomObject>
    <fields>
        <fullName>Action_Type__c</fullName>
        <label>Action Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Create New</fullName>
                </value>
                <value>
                    <fullName>Update Current</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Article_Project_Request_Type__c</fullName>
        <label>Article/Project Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Article Update</fullName>
                </value>
                <value>
                    <fullName>Email Update</fullName>
                </value>
                <value>
                    <fullName>Multi Article Change</fullName>
                </value>
                <value>
                    <fullName>New Article</fullName>
                </value>
                <value>
                    <fullName>New Email</fullName>
                </value>
                <value>
                    <fullName>New Source Doc</fullName>
                </value>
                <value>
                    <fullName>New Training</fullName>
                </value>
                <value>
                    <fullName>Project Release</fullName>
                </value>
                <value>
                    <fullName>Project Test</fullName>
                </value>
                <value>
                    <fullName>Source Doc Update</fullName>
                </value>
                <value>
                    <fullName>Training Update</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Days__c</fullName>
        <formula>CASE(MOD( DATEVALUE( CreatedDate ) - DATE(1985,6,24),7), 
  0 , CASE( MOD( Completed_Date__c - DATEVALUE(CreatedDate ),7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
  1 , CASE( MOD( Completed_Date__c - DATEVALUE(CreatedDate ),7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
  2 , CASE( MOD( Completed_Date__c - DATEVALUE(CreatedDate ),7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
  3 , CASE( MOD( Completed_Date__c - DATEVALUE(CreatedDate ),7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
  4 , CASE( MOD( Completed_Date__c - DATEVALUE(CreatedDate ),7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
  5 , CASE( MOD( Completed_Date__c - DATEVALUE(CreatedDate ),7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
  6 , CASE( MOD( Completed_Date__c - DATEVALUE(CreatedDate ),7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
  999) 
  + 
  (FLOOR(( Completed_Date__c - DATEVALUE(CreatedDate ))/7)*5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Client_Service_Notes__c</fullName>
        <label>Client Service Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact_SME_PM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact/SME/PM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Shared_Services_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Needed_By_If_Applicable__c</fullName>
        <label>Date Needed By (If Applicable)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <label>Document Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Article</fullName>
                </value>
                <value>
                    <fullName>Email Temp</fullName>
                </value>
                <value>
                    <fullName>LZ Article</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Partner Article</fullName>
                </value>
                <value>
                    <fullName>Public Article</fullName>
                </value>
                <value>
                    <fullName>Source Doc</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Functional_Area__c</fullName>
        <label>Functional Area</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Care</fullName>
                </value>
                <value>
                    <fullName>Fulfillment</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Goals_Objective__c</fullName>
        <label>Goals/Objective</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Hours_Worked__c</fullName>
        <label>Hours Worked</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ImplementerID__c</fullName>
        <formula>IF( Project_Implementer__r.Id  = $User.Id , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ImplementerID</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Initiative__c</fullName>
        <label>Initiative</label>
        <referenceTo>Initiative__c</referenceTo>
        <relationshipLabel>Shared Services Requests</relationshipLabel>
        <relationshipName>Shared_Services_Requests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Line_of_Business__c</fullName>
        <label>Line of Business</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>Attorney Services</fullName>
                </value>
                <value>
                    <fullName>Business Services</fullName>
                </value>
                <value>
                    <fullName>Customer Care</fullName>
                    <isActive>false</isActive>
                    <label>Customer Care</label>
                </value>
                <value>
                    <fullName>Finance</fullName>
                    <isActive>false</isActive>
                    <label>Finance</label>
                </value>
                <value>
                    <fullName>HR</fullName>
                    <isActive>false</isActive>
                    <label>HR</label>
                </value>
                <value>
                    <fullName>Intellectual Property Services</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                    <isActive>false</isActive>
                    <label>Marketing</label>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Personal Services</fullName>
                </value>
                <value>
                    <fullName>Process Improvement</fullName>
                    <isActive>false</isActive>
                    <label>Process Improvement</label>
                </value>
                <value>
                    <fullName>Tech</fullName>
                    <isActive>false</isActive>
                    <label>Tech</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>My_Open_Requests_Approver__c</fullName>
        <formula>if( Project_Request_Approver__c =$User.Id,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My Open Requests - Approver</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>My_Open_Requests_Implementor__c</fullName>
        <formula>if( Project_Implementer__c =$User.Id,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My Open Requests - Implementor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>My_Submitted_Requests__c</fullName>
        <formula>if( Project_Request_Submitter__c =$User.Id,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My Submitted Requests</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Critical</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Line_of_Business__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>(LLC) Limited Liability Company</fullName>
                </value>
                <value>
                    <fullName>(LLP) Limited Liability Partnership</fullName>
                </value>
                <value>
                    <fullName>(LP) Limited Partnership</fullName>
                </value>
                <value>
                    <fullName>501(c)3 Preparation</fullName>
                </value>
                <value>
                    <fullName>All Products</fullName>
                </value>
                <value>
                    <fullName>Amendment Annual Reports</fullName>
                </value>
                <value>
                    <fullName>Attorney-Prepared Provisional Application for Patent</fullName>
                </value>
                <value>
                    <fullName>Bankruptcy</fullName>
                </value>
                <value>
                    <fullName>Business Advantage Pro Plan</fullName>
                </value>
                <value>
                    <fullName>Certificate of Good Standing</fullName>
                </value>
                <value>
                    <fullName>Certified Copies</fullName>
                </value>
                <value>
                    <fullName>Compliance Calendar</fullName>
                </value>
                <value>
                    <fullName>Conversion</fullName>
                </value>
                <value>
                    <fullName>Copyright</fullName>
                </value>
                <value>
                    <fullName>Corporate Minutes</fullName>
                </value>
                <value>
                    <fullName>DBA (Doing Business As)</fullName>
                </value>
                <value>
                    <fullName>Design Patent</fullName>
                </value>
                <value>
                    <fullName>Dissolution</fullName>
                </value>
                <value>
                    <fullName>Divorce</fullName>
                </value>
                <value>
                    <fullName>EIN Obtainment/Federal Tax ID</fullName>
                </value>
                <value>
                    <fullName>Entity Name Availability Check</fullName>
                </value>
                <value>
                    <fullName>Foreign Qualification</fullName>
                </value>
                <value>
                    <fullName>General Partnership Agreement</fullName>
                </value>
                <value>
                    <fullName>Incorporation</fullName>
                </value>
                <value>
                    <fullName>Initial Reports</fullName>
                </value>
                <value>
                    <fullName>Joint Venture Agreement</fullName>
                </value>
                <value>
                    <fullName>Last Will &amp; Testament</fullName>
                </value>
                <value>
                    <fullName>Legal Advantage Plus Plan</fullName>
                </value>
                <value>
                    <fullName>Living Trust</fullName>
                </value>
                <value>
                    <fullName>Living Will</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Description__c</fullName>
        <label>Project Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Project_Implementer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Implementer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Shared_Services_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Request_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Request Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Shared_Services_Requests2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Request_Submitter__c</fullName>
        <label>Project Request Submitter</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Request_Type__c</fullName>
        <label>Project Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Article (Customer-Facing)</fullName>
                </value>
                <value>
                    <fullName>Article (Internal)</fullName>
                </value>
                <value>
                    <fullName>Article Update</fullName>
                    <isActive>false</isActive>
                    <label>Article Update</label>
                </value>
                <value>
                    <fullName>Change Management</fullName>
                </value>
                <value>
                    <fullName>Communication</fullName>
                </value>
                <value>
                    <fullName>Customer Request (Document Revision)</fullName>
                    <isActive>false</isActive>
                    <label>Customer Request (Document Revision)</label>
                </value>
                <value>
                    <fullName>Customer Request (Legal Research)</fullName>
                    <isActive>false</isActive>
                    <label>Customer Request (Legal Research)</label>
                </value>
                <value>
                    <fullName>Customer Request (LZ Signature as RA)</fullName>
                    <isActive>false</isActive>
                    <label>Customer Request (LZ Signature as RA)</label>
                </value>
                <value>
                    <fullName>Customer Request (Release Documents for Deceased)</fullName>
                    <isActive>false</isActive>
                    <label>Customer Request (Release Documents for Deceased)</label>
                </value>
                <value>
                    <fullName>Customer Request (Urgent Legal Action)</fullName>
                    <isActive>false</isActive>
                    <label>Customer Request (Urgent Legal Action)</label>
                </value>
                <value>
                    <fullName>Document (Final Packet Instructions)</fullName>
                    <isActive>false</isActive>
                    <label>Document (Final Packet Instructions)</label>
                </value>
                <value>
                    <fullName>Document (Legal Form or Template)</fullName>
                    <isActive>false</isActive>
                    <label>Document (Legal Form or Template)</label>
                </value>
                <value>
                    <fullName>Document (Rejected Document or Form)</fullName>
                    <isActive>false</isActive>
                    <label>Document (Rejected Document or Form)</label>
                </value>
                <value>
                    <fullName>Email Template</fullName>
                </value>
                <value>
                    <fullName>Email Update</fullName>
                    <isActive>false</isActive>
                    <label>Email Update</label>
                </value>
                <value>
                    <fullName>Multi Article Change</fullName>
                    <isActive>false</isActive>
                    <label>Multi Article Change</label>
                </value>
                <value>
                    <fullName>New Article</fullName>
                    <isActive>false</isActive>
                    <label>New Article</label>
                </value>
                <value>
                    <fullName>New Email</fullName>
                    <isActive>false</isActive>
                    <label>New Email</label>
                </value>
                <value>
                    <fullName>New Source Doc</fullName>
                    <isActive>false</isActive>
                    <label>New Source Doc</label>
                </value>
                <value>
                    <fullName>New Training</fullName>
                    <isActive>false</isActive>
                    <label>New Training</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <isActive>false</isActive>
                    <label>Other</label>
                </value>
                <value>
                    <fullName>Project Release</fullName>
                    <isActive>false</isActive>
                    <label>Project Release</label>
                </value>
                <value>
                    <fullName>Project Test</fullName>
                    <isActive>false</isActive>
                    <label>Project Test</label>
                </value>
                <value>
                    <fullName>Source Doc Update</fullName>
                    <isActive>false</isActive>
                    <label>Source Doc Update</label>
                </value>
                <value>
                    <fullName>Training Delivery</fullName>
                </value>
                <value>
                    <fullName>Training Materials</fullName>
                </value>
                <value>
                    <fullName>Training Update</fullName>
                    <isActive>false</isActive>
                    <label>Training Update</label>
                </value>
                <value>
                    <fullName>Website or Questionnaire Content</fullName>
                    <isActive>false</isActive>
                    <label>Website or Questionnaire Content</label>
                </value>
                <value>
                    <fullName>Workforce Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Status__c</fullName>
        <label>Request Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Working</fullName>
                </value>
                <value>
                    <fullName>Researching</fullName>
                </value>
                <value>
                    <fullName>In Review</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                    <default>true</default>
                    <label>Pending Approval</label>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                    <isActive>false</isActive>
                    <label>Accepted</label>
                </value>
                <value>
                    <fullName>Waiting</fullName>
                    <isActive>false</isActive>
                    <label>Waiting</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <displayFormat>A-{0000}</displayFormat>
        <label>Request #</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Requested_Start_Date__c</fullName>
        <label>Requested Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Requesting_Department__c</fullName>
        <label>Requesting Department</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Account Management</fullName>
                    <isActive>false</isActive>
                    <label>Account Management</label>
                </value>
                <value>
                    <fullName>Customer Care</fullName>
                </value>
                <value>
                    <fullName>Fulfillment</fullName>
                </value>
                <value>
                    <fullName>Instructional Delivery</fullName>
                    <isActive>false</isActive>
                    <label>Instructional Delivery</label>
                </value>
                <value>
                    <fullName>Instructional Design</fullName>
                    <isActive>false</isActive>
                    <label>Instructional Design</label>
                </value>
                <value>
                    <fullName>Knowledge Management</fullName>
                    <isActive>false</isActive>
                    <label>Knowledge Management</label>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <isActive>false</isActive>
                    <label>Other</label>
                </value>
                <value>
                    <fullName>Process Improvement</fullName>
                    <isActive>false</isActive>
                    <label>Process Improvement</label>
                </value>
                <value>
                    <fullName>QA/Compliance</fullName>
                    <isActive>false</isActive>
                    <label>QA/Compliance</label>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Shared Services</fullName>
                </value>
                <value>
                    <fullName>Tech</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requestor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requestor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Shared_Services_Requests4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sponsor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sponsor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Shared_Services_Requests3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WFM_Documents__c</fullName>
        <formula>IF(TEXT(WFM_Task__c) = &apos;Adherence/Attendance Updates&apos;, HYPERLINK(&quot;https://legalzoom.my.salesforce.com/sfc/p/G0000000BmQx/a/G0000000HXj4/2cTrXf190WBlfTqQmS79qYzakWZddHqtSTEdghurSTo&quot;
, &quot;Adherence &amp; Attendance&quot;) ,
       IF ( TEXT(WFM_Task__c) = &apos;OT Requests&apos;, HYPERLINK(&quot;https://legalzoom.my.salesforce.com/sfc/p/G0000000BmQx/a/G0000000HXip/6iIfu9kUTGn_t6Nl2jgpigFoTwGYNIjolMwvhGmyE9g&quot;
, &quot;OT Requests&quot;),
IF ( TEXT(WFM_Task__c) = &apos;Shift Swaps&apos;, HYPERLINK(&quot;https://legalzoom.my.salesforce.com/sfc/p/G0000000BmQx/a/G0000000HXiz/xc5cIStTCuPrE4eqBwovClqm3TOoAdIQy0VGA5lVB3o&quot;, &quot;Shift Swaps&quot;),
IF ( TEXT(WFM_Task__c) = &apos;Shift Swaps&apos;, HYPERLINK(&quot;https://legalzoom.my.salesforce.com/sfc/p/G0000000BmQx/a/G0000000HXiz/xc5cIStTCuPrE4eqBwovClqm3TOoAdIQy0VGA5lVB3o&quot;, &quot;Shift Swaps&quot;),
IF ( TEXT( WFM_SubTask__c ) = &apos;Training Requests&apos;, HYPERLINK(&quot;https://legalzoom.my.salesforce.com/sfc/p/G0000000BmQx/a/G0000000HXiu/lrX8jQC1V6s0UTVQVnaPi2yBr0J6Kxu9Fh.Z_9GQm2c&quot;, &quot;Training or Meeting Requests&quot;),
IF ( TEXT( WFM_SubTask__c ) = &apos;Scheduling meetings&apos;, HYPERLINK(&quot;https://legalzoom.my.salesforce.com/sfc/p/G0000000BmQx/a/G0000000HXj9/5srahpk1o1fgYQnCGv6j.OyFt483ahlfDeNauLk6_Ko&quot;, &quot;Schedule Changes&quot;),
IF ( TEXT( WFM_SubTask__c ) = &apos;Shift updates&apos;, HYPERLINK(&quot;https://legalzoom.my.salesforce.com/sfc/p/G0000000BmQx/a/G0000000HXj9/5srahpk1o1fgYQnCGv6j.OyFt483ahlfDeNauLk6_Ko&quot;, &quot;Schedule Changes&quot;),
IF ( TEXT( WFM_Task__c ) = &apos;New Queue Request&apos;, HYPERLINK(&quot;https://legalzoom.my.salesforce.com/sfc/p/#G0000000BmQx/a/G0000000HXjE/pHzWaWy_COgTVIjz0HgwsxQZQK3enr43OivepXffU38&quot;, &quot;New Queue Request&quot;),&quot; &quot;))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WFM Documents</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WFM_Prototype_Field__c</fullName>
        <formula>IF(TEXT(WFM_Task__c) = &apos;Adherence/Attendance Updates&apos;, HYPERLINK(&quot;https://www.tfaforms.com/456932?tfa_1772=&quot;&amp;Id, &quot;Adherence &amp; Attendance&quot;) , 
IF ( TEXT(WFM_Task__c) = &apos;OT Requests&apos;, HYPERLINK(&quot;https://www.tfaforms.com/457095?tfa_1772=&quot;&amp;Id, &quot;OT Requests&quot;), 
IF ( TEXT( WFM_SubTask__c ) = &apos;Training Requests&apos;, HYPERLINK(&quot;https://www.tfaforms.com/456937?tfa_1772=&quot;&amp;Id, &quot;Training or Meeting Requests&quot;), 
IF ( TEXT( WFM_SubTask__c ) = &apos;Scheduling meetings&apos;, HYPERLINK(&quot;https://www.tfaforms.com/456937?tfa_1772=&quot;&amp;Id, &quot;Schedule Changes&quot;), 
IF ( TEXT( WFM_SubTask__c ) = &apos;Shift updates&apos;, HYPERLINK(&quot;https://www.tfaforms.com/456890?tfa_1772=&quot;&amp;Id, &quot;Schedule Changes&quot;),&quot; &quot;)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WFM Prototype Field</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WFM_SubTask__c</fullName>
        <label>WFM SubTask</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>WFM_Task__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Attendance Tracker Updates</fullName>
                </value>
                <value>
                    <fullName>Occurrence Overrides</fullName>
                </value>
                <value>
                    <fullName>Time Off Inquiries</fullName>
                </value>
                <value>
                    <fullName>Attendance Review</fullName>
                </value>
                <value>
                    <fullName>Exception Request</fullName>
                </value>
                <value>
                    <fullName>Training Requests</fullName>
                </value>
                <value>
                    <fullName>Scheduling meetings</fullName>
                </value>
                <value>
                    <fullName>Shift updates</fullName>
                </value>
                <value>
                    <fullName>Shift Bid Requests</fullName>
                </value>
                <value>
                    <fullName>Volume Analysis</fullName>
                </value>
                <value>
                    <fullName>Staffing Analysis</fullName>
                </value>
                <value>
                    <fullName>Schedule Modeling</fullName>
                </value>
                <value>
                    <fullName>WFM Genesys Access Requests</fullName>
                </value>
                <value>
                    <fullName>Please provide by mid-day Wednesday</fullName>
                </value>
                <value>
                    <fullName>Submit when Genesys process doesn&apos;t work</fullName>
                </value>
                <value>
                    <fullName>New queue</fullName>
                </value>
                <value>
                    <fullName>New phone number request with ACD routing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WFM_Task__c</fullName>
        <label>WFM Task</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Project_Request_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Adherence/Attendance Updates</fullName>
                </value>
                <value>
                    <fullName>Schedule Management</fullName>
                </value>
                <value>
                    <fullName>WFA Requests</fullName>
                </value>
                <value>
                    <fullName>OT Requests</fullName>
                </value>
                <value>
                    <fullName>Shift Swaps</fullName>
                </value>
                <value>
                    <fullName>New Queue Request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Shared Services Request</label>
    <listViews>
        <fullName>ID_Team_View</fullName>
        <columns>NAME</columns>
        <columns>Project_Request_Type__c</columns>
        <columns>Project_Implementer__c</columns>
        <columns>Project_Request_Submitter__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Date_Needed_By_If_Applicable__c</columns>
        <columns>Request_Status__c</columns>
        <columns>Initiative__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Implementer__c</field>
            <operation>contains</operation>
            <value>Kay,Kim,Rachel</value>
        </filters>
        <filters>
            <field>Request_Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Rejected</value>
        </filters>
        <label>ID Team View</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Implementer_Dewi_Smith</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Project_Request_Type__c</columns>
        <columns>Project_Implementer__c</columns>
        <columns>Project_Request_Submitter__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Date_Needed_By_If_Applicable__c</columns>
        <columns>Request_Status__c</columns>
        <columns>Initiative__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Implementer__c</field>
            <operation>equals</operation>
            <value>Dewi Smith</value>
        </filters>
        <filters>
            <field>Project_Request_Approver__c</field>
            <operation>equals</operation>
            <value>Dewi Smith</value>
        </filters>
        <label>Implementer - Dewi Smith</label>
        <language>en_US</language>
        <sharedTo>
            <role>KM_Team</role>
        </sharedTo>
    </listViews>
</CustomObject>